@@ -1,3 +1,7 @@
+2020-12-14  James K. Lowden  <jklowden@symas.com>
+
+	* cobc.c codegen.c pplex.l scanner.l tree.c typeck.c: remove
+	  use of likely
 
 2020-12-11  Ron Norman <rjn@inglenet.com>
 
